[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["Sergiy Kolesnikov <SergiyKolesnikov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.1"
pyspark = {extras = ["ml", "mllib", "sql"], version = "^3.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
