[tool.poetry]
name = "spark"
version = "0.1.0"
description = "A local dev environment to follow the examples in 'Learning Spark' 2nd edition by Damji et al."
authors = ["Sergiy Kolesnikov <SergiyKolesnikov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.1"
pyspark = {extras = ["ml", "mllib", "sql"], version = "^3.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
